[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gozarpay"
version = "0.1.0"
description = "Official Python SDK for GozarPay API"
readme = "README.md"
authors = [{name = "Reza Mousavian", email = "rezamosavian1014@gmail.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["gozarpay", "payments", "sdk", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.5,<3.0"
]

[project.urls]
Homepage = "https://example.com/gozarpay-python-sdk"
Repository = "https://github.com/yourname/gozarpay-python-sdk"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.7"
]
